--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jersey+10+Charted&display=swap');
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -7,6 +9,7 @@
 body{
     width: 100%;
     height: 100vh;
+    background-image: url("https://wallpapercave.com/wp/wp8695692.jpg");
 }
 
 #pokemonInfo{
