--- a/style.css
+++ b/style.css
@@ -12,10 +12,23 @@ body{
     background-image: url("https://wallpapercave.com/wp/wp8695692.jpg");
 }
 
+h1 {
+    font-family: "Dakdo-DOIRW", sans-serif;
+    font-size: 8em;
+    background-clip: text; 
+    -webkit-text-fill-color: transparent;
+    background-image: linear-gradient(to right, rgb(42, 171, 251) 0%, rgb(255, 90, 117) 50%, white 100%);
+  }
+  
+
 #pokemonInfo{
     width: 400px;
     height: 500px;
     background-color: rgb(255, 70, 70);
+    background-image: url("pokedex\ Background\ Removed.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left;
 }
 
 input[type="text"]{
